style: fix mobile alignments, enlarge badges, redesign mobile menu

--- a/frontend/src/app/pages/home/components/about/about.scss
+++ b/frontend/src/app/pages/home/components/about/about.scss
@@ -64,6 +64,10 @@
     .about-text-card {
       background: transparent;
       padding: 0;
+      
+      .label, h3 {
+        text-align: center;
+      }
     }
 
     .about-image-card {
